--- a/apiservices/package.json
+++ b/apiservices/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx sequelize db:migrate",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx sequelize db:migrate && sequelize db:seed:all",
     "start": "node index.js"
   },
   "author": "",
